--- a/task/alert-http-status.yaml
+++ b/task/alert-http-status.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: alert-http-status
-  namespace: default
+  namespace: ops-system
 spec:
   desc: alert
   crontab: "1/* * * * *"
