--- a/charts/ops/templates/deployment.yaml
+++ b/charts/ops/templates/deployment.yaml
@@ -56,7 +56,7 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           env:
-            - name: ACTION_NAMESPACE
+            - name: ACTIVE_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
