--- a/task/add-file2image.yaml
+++ b/task/add-file2image.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: build-imagefile
-  namespace: default
+  namespace: ops-system
 spec:
   desc: add file to image
   variables:
