--- a/task/add-imagepullsecret.yaml
+++ b/task/add-imagepullsecret.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: add-imagepullsecret
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Create Pull Image Secret
   variables:
@@ -10,7 +10,7 @@ spec:
     secret_username: ""
     secret_password: ""
     secret_name: mysecret
-    secret_namespace: default
+    secret_namespace: ops-system
     kubeconfig: "/etc/kubernetes/admin.conf"
     clear: false
   steps:
