--- a/task/add-localbinpath.yaml
+++ b/task/add-localbinpath.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: add-localbinpath
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Set Path
   steps:
