--- a/task/add-opscli.yaml
+++ b/task/add-opscli.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: task-sample
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Install Opscli
   variables:
