--- a/task/alert-promql.yaml
+++ b/task/alert-promql.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: alert-promql
-  namespace: default
+  namespace: ops-system
 spec:
   crontab: "1/* * * * *"
   desc: alert by promql
