--- a/task/app-descheduler.yaml
+++ b/task/app-descheduler.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: add-descheduler
-  namespace: default
+  namespace: ops-system
 spec:
   desc: install descheduler
   variables:
