--- a/task/app-grafana.yaml
+++ b/task/app-grafana.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: add-grafana
-  namespace: default
+  namespace: ops-system
 spec:
   desc: install grafana
   variables:
