--- a/task/app-istio.yaml
+++ b/task/app-istio.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: add-istio
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Add istio
   variables:
