--- a/task/app-metricsserver.yaml
+++ b/task/app-metricsserver.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: add-metricsserver
-  namespace: default
+  namespace: ops-system
 spec:
   desc: add metricsServer
   variables:
