--- a/task/app-openebs.yaml
+++ b/task/app-openebs.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: add-openebs
-  namespace: default
+  namespace: ops-system
 spec:
   desc: add openebs
   variables:
