--- a/task/app-prometheus.yaml
+++ b/task/app-prometheus.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: add-prometheus
-  namespace: default
+  namespace: ops-system
 spec:
   desc: install prometheus
   variables:
