--- a/task/clear-docker.yaml
+++ b/task/clear-docker.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: clear-docker
-  namespace: default
+  namespace: ops-system
 spec:
   crontab: "15 * * * *"
   nameref: prod
