--- a/task/clear-kube.yaml
+++ b/task/clear-kube.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: clear-kube
-  namespace: default
+  namespace: ops-system
 spec:
   crontab: "*/2 * * * *"
   nameref: dev1
