--- a/task/clear-opstask.yaml
+++ b/task/clear-opstask.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: clear-opstask
-  namespace: default
+  namespace: ops-system
 spec:
   crontab: "1 20 * * *"
   nameref: prod
