--- a/task/get-diskio-byfio.yaml
+++ b/task/get-diskio-byfio.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: get-diskio-byfio
-  namespace: default
+  namespace: ops-system
 spec:
   desc: fio will destroy data on filename path
   variables:
