--- a/task/get-imagefile.yaml
+++ b/task/get-imagefile.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: get-imagefile
-  namespace: default
+  namespace: ops-system
 spec:
   desc: copy file from image file
   variables:
