--- a/task/get-kubeconfig.yaml
+++ b/task/get-kubeconfig.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: get-kubeconfig
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Get Kubeconfig
   steps:
