--- a/task/get-osstaus.yaml
+++ b/task/get-osstaus.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: get-osstaus
-  namespace: default
+  namespace: ops-system
 spec:
   crontab: "*/10 * * * *"
   nameref: dev2
