--- a/task/k8s-drain-node.yaml
+++ b/task/k8s-drain-node.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: drain-node
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Drain Kubernetes Node
   variables:
