--- a/task/k8s-hpa.yaml
+++ b/task/k8s-hpa.yaml
@@ -2,13 +2,13 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: add-hpa
-  namespace: default
+  namespace: ops-system
 spec:
   desc: add hpa for deployment
   variables:
     name:
     resource_type: deploy
-    namespace: default
+    namespace: ops-system
     min: 1
     max: 5
     cpu_percent: 80
