--- a/task/list-svc.yaml
+++ b/task/list-svc.yaml
@@ -2,11 +2,11 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: list-svc
-  namespace: default
+  namespace: ops-system
 spec:
   desc: list svc
   variables:
-    namespace: default
+    namespace: ops-system
   steps:
     - name: get svc info
       content: kubectl get service -A -o=custom-columns='NAMESPACE:.metadata.namespace,NAME:.metadata.name,IP:.spec.clusterIP,PORT:.spec.ports[*].targetPort' 
