--- a/task/renew-kube-cert.yaml
+++ b/task/renew-kube-cert.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: renew-cert
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Renew Cert
   steps:
