--- a/task/set-hosts.yaml
+++ b/task/set-hosts.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: add-etchosts
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Add hosts
   variables:
