--- a/task/set-kernel.yaml
+++ b/task/set-kernel.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: fix-kernel
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Fix Kernel Configuration
   steps:
