--- a/task/upgrade-1.16m.yaml
+++ b/task/upgrade-1.16m.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: upgrade-1.16m
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Upgrade-K8s-Master-From-1.16-to-1.17.17-0
   variables:
