--- a/task/upgrade-1.16n.yaml
+++ b/task/upgrade-1.16n.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: upgrade-1.16n
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Upgrade-K8s-Node-From-1.16-to-1.17.17-0
   variables:
