--- a/task/upgrade-1.19m.yaml
+++ b/task/upgrade-1.19m.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: upgrade-1.19m
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Upgrade-K8s-Master-From-1.19-to-1.20
   variables:
