--- a/task/upgrade-base.yaml
+++ b/task/upgrade-base.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: upgrade-base
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Upgrade-K8s-Base
   steps:
