--- a/task/upgrade-kernel3to5.yaml
+++ b/task/upgrade-kernel3to5.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: upgrade-kernel3to5
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Upgrade Centos Kernel 3 to 5
   steps:
