--- a/task/velero-backup.yaml
+++ b/task/velero-backup.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: velero-backup
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Backup Kubernetes Using Velero
   variables:
