--- a/task/velero-restore.yaml
+++ b/task/velero-restore.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: velero-restore
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Restore Kubernetes Using Velero
   variables:
