--- a/task/velero-status.yaml
+++ b/task/velero-status.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: velero-status
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Status Velero
   variables:
