--- a/task/velero-uninstall.yaml
+++ b/task/velero-uninstall.yaml
@@ -2,7 +2,7 @@ apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
   name: velero-uninstall
-  namespace: default
+  namespace: ops-system
 spec:
   desc: Uninstall Velero
   steps:
