--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -35,14 +35,8 @@ jobs:
 
       - name: Generate Helm Charts
         run: |
-          helm package ./charts/ops --destination ./charts
-          helm repo index ./charts --merge ./charts/index.yaml
-
-      - name: Copy Helm Charts
-        run: |
-          mkdir -p ./docs/_book/charts
-          cp ./charts/index.yaml ./docs/_book/charts/index.yaml
-          cp ./charts/*.tgz ./docs/_book/charts/
+          helm package ./charts/ops --destination ./docs/_book/charts
+          helm repo index ./docs/_book/charts --merge ./docs/_book/charts/index.yaml
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
