--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Generate Helm Charts
         run: |
           helm package ./charts/ops --destination ./charts/
-          helm repo index ./charts --merge ./charts/index.yaml
+          helm repo index ./charts --merge ./charts/index.yaml --url https://www.chenshaowen.com/ops/charts
 
       - name: Copy Helm Charts
         run: |
