--- a/charts/ops/Chart.yaml
+++ b/charts/ops/Chart.yaml
@@ -22,3 +22,14 @@ version: 1.0.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.0.0"
+
+icon: https://www.chenshaowen.com/ops/logo.png
+
+sources:
+  - https://github.com/shaowenchen/ops
+
+maintainers:
+  - name: shaowenchen
+    email: mail@chenshaowen.com
+
+home: https://www.chenshaowen.com/ops
