fix: event permission

--- a/charts/ops/templates/clusterrole.yaml
+++ b/charts/ops/templates/clusterrole.yaml
@@ -96,4 +96,11 @@ rules:
   - update
   - patch
   - delete
+- apiGroups:
+  - ""
+  resources:
+  - events
+  verbs:
+  - create
+  - patch
 {{- end -}}
