--- a/charts/ops/templates/service.yaml
+++ b/charts/ops/templates/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "ops.fullname" . }}
+  name: {{ include "ops.fullname" . }}-metrics-service
   labels:
     {{- include "ops.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 8080
       protocol: TCP
       name: http
   selector:
