--- a/task/set-hubimage.yaml
+++ b/task/set-hubimage.yaml
@@ -11,19 +11,28 @@ spec:
   steps:
     - name: replace quay.io/prometheus-operator
       content: kubectl -n ${namespace} get ${resource} -o yaml | sed 's/quay.io\/prometheus-operator/hubimage/g' | kubectl apply -f -
+      allowfailure: "true"
     - name: replace registry.k8s.io/kube-state-metrics
       content: kubectl -n ${namespace} get ${resource} -o yaml | sed 's/registry.k8s.io\/kube-state-metrics/hubimage/g' | kubectl apply -f -
+      allowfailure: "true"
     - name: replace quay.io/prometheus
       content: kubectl -n ${namespace} get ${resource} -o yaml | sed 's/quay.io\/prometheus/hubimage/g' | kubectl apply -f -
+      allowfailure: "true"
     - name: replace prom/blackbox-exporter
       content: kubectl -n ${namespace} get ${resource} -o yaml | sed 's/prom\/blackbox-exporter/hubimage\/blackbox-exporter/g' | kubectl apply -f -
+      allowfailure: "true"
     - name: replace k8s.gcr.io/autoscaling
       content: kubectl -n ${namespace} get ${resource} -o yaml | sed 's/k8s.gcr.io\/autoscaling/hubimage/g' | kubectl apply -f -
+      allowfailure: "true"
     - name: replace ghcr.io/chaos-mesh/chaos-mesh
       content: kubectl -n ${namespace} get ${resource} -o yaml | sed 's/ghcr.io\/chaos-mesh\/chaos-mesh/hubimage\/chaos-mesh/g' | kubectl apply -f -
+      allowfailure: "true"
     - name: replace ghcr.io/chaos-mesh/chaos-daemon
       content: kubectl -n ${namespace} get ${resource} -o yaml | sed 's/ghcr.io\/chaos-mesh\/chaos-daemon/hubimage\/chaos-daemon/g' | kubectl apply -f -
+      allowfailure: "true"
     - name: replace ghcr.io/chaos-mesh/chaos-dashboard
       content: kubectl -n ${namespace} get ${resource} -o yaml | sed 's/ghcr.io\/chaos-mesh\/chaos-dashboard/hubimage\/chaos-dashboard/g' | kubectl apply -f -
+      allowfailure: "true"
     - name: replace ghcr.io/chaos-mesh/chaos-coredns
       content: kubectl -n ${namespace} get ${resource} -o yaml | sed 's/ghcr.io\/chaos-mesh\/chaos-coredns/hubimage\/chaos-coredns/g' | kubectl apply -f -
+      allowfailure: "true"
