--- a/task/get-osstatus.yaml
+++ b/task/get-osstatus.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: get-osstaus
+  name: get-osstatus
   namespace: ops-system
 spec:
   crontab: "*/10 * * * *"
