--- a/task/add-opscli.yaml
+++ b/task/add-opscli.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: task-sample
+  name: add-opscli
   namespace: ops-system
 spec:
   desc: Install Opscli
