add clear biglog

--- a/task/clear-biglog.yaml
+++ b/task/clear-biglog.yaml
@@ -17,7 +17,7 @@ spec:
     logname: "*log*"
   steps:
     - name: find ${logname} under ${logpath} with size > ${size}
-      content: find ${logpath} -type f -name "${logname}" -size +${size} -exec du -h {} \;
+      content: find ${logpath} -type f -name "${logname}" -size +${size} -exec du -h {} \; 2>/dev/null || true
     - name: clear log
       content: find ${logpath} -type f -name "${logname}" -size +${size} -exec sh -c 'for file do echo "cleaned $file" >&2; echo "" > "$file"; done' sh {} +
       when: ${clear}
