--- a/config/crd/bases/crd.chenshaowen.com_taskruns.yaml
+++ b/config/crd/bases/crd.chenshaowen.com_taskruns.yaml
@@ -5,23 +5,32 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.9.2
   creationTimestamp: null
-  name: tasks.crd.chenshaowen.com
+  name: taskruns.crd.chenshaowen.com
 spec:
   group: crd.chenshaowen.com
   names:
-    kind: Task
-    listKind: TaskList
-    plural: tasks
-    singular: task
+    kind: TaskRun
+    listKind: TaskRunList
+    plural: taskruns
+    singular: taskrun
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .spec.crontab
-      name: Crontab
+    - jsonPath: .spec.taskRef
+      name: Task
       type: string
     - jsonPath: .spec.typeRef
       name: TypeRef
       type: string
+    - jsonPath: .spec.nameRef
+      name: NameRef
+      type: string
+    - jsonPath: .spec.nodeName
+      name: NodeName
+      type: string
+    - jsonPath: .spec.all
+      name: All
+      type: boolean
     - jsonPath: .status.startTime
       name: StartTime
       type: date
@@ -31,6 +40,7 @@ spec:
     name: v1
     schema:
       openAPIV3Schema:
+        description: TaskRun is the Schema for the taskruns API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -45,65 +55,20 @@ spec:
           metadata:
             type: object
           spec:
-            description: TaskSpec defines the desired state of Task
+            description: TaskRunSpec defines the desired state of TaskRun
             properties:
               all:
                 type: boolean
-              crontab:
-                description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
-                  Important: Run "make" to regenerate code after modifying this file'
-                type: string
-              desc:
-                type: string
-              incluster:
-                type: boolean
-              name:
-                type: string
               nameRef:
                 type: string
               nodeName:
                 type: string
               runtimeImage:
                 type: string
-              steps:
-                items:
-                  properties:
-                    alert:
-                      properties:
-                        if:
-                          type: string
-                        url:
-                          type: string
-                      type: object
-                    allowfailure:
-                      type: string
-                    content:
-                      type: string
-                    direction:
-                      type: string
-                    kubernetes:
-                      properties:
-                        action:
-                          type: string
-                        kind:
-                          type: string
-                        name:
-                          type: string
-                        namespace:
-                          type: string
-                      type: object
-                    localfile:
-                      type: string
-                    name:
-                      type: string
-                    remotefile:
-                      type: string
-                    when:
-                      type: string
-                  type: object
-                type: array
-              taskRunHistoryLimit:
-                type: integer
+              taskRef:
+                description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
+                  Important: Run "make" to regenerate code after modifying this file'
+                type: string
               typeRef:
                 type: string
               variables:
@@ -112,16 +77,41 @@ spec:
                 type: object
             type: object
           status:
-            description: TaskStatus defines the observed state of Task
+            description: TaskRunStatus defines the observed state of TaskRun
             properties:
               runStatus:
-                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
-                  of cluster Important: Run "make" to regenerate code after modifying
-                  this file'
                 type: string
               startTime:
                 format: date-time
                 type: string
+              taskrunNodeStatus:
+                additionalProperties:
+                  properties:
+                    nodeName:
+                      type: string
+                    runStatus:
+                      type: string
+                    startTime:
+                      format: date-time
+                      type: string
+                    taskRunStep:
+                      items:
+                        properties:
+                          stepCmd:
+                            type: string
+                          stepName:
+                            type: string
+                          stepOutput:
+                            type: string
+                          stepStatus:
+                            type: string
+                        type: object
+                      type: array
+                  type: object
+                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
+                  of cluster Important: Run "make" to regenerate code after modifying
+                  this file'
+                type: object
             type: object
         type: object
     served: true
