--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/crd.chenshaowen.com_hosts.yaml
 - bases/crd.chenshaowen.com_tasks.yaml
 - bases/crd.chenshaowen.com_clusters.yaml
+- bases/crd.chenshaowen.com_taskruns.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -13,6 +14,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_hosts.yaml
 #- patches/webhook_in_tasks.yaml
 #- patches/webhook_in_clusters.yaml
+#- patches/webhook_in_taskruns.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -20,6 +22,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_hosts.yaml
 #- patches/cainjection_in_tasks.yaml
 #- patches/cainjection_in_clusters.yaml
+#- patches/cainjection_in_taskruns.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
