--- a/task/clear-docker.yaml
+++ b/task/clear-docker.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: ops-system
 spec:
   crontab: "15 * * * *"
-  nameref: prod
-  typeref: cluster
+  nameRef: prod
+  typeRef: cluster
   all: true
   desc: Docker Clear
   steps:
