--- a/Dockerfile-Server
+++ b/Dockerfile-Server
@@ -5,7 +5,7 @@ RUN go build -o bin/ops-server cmd/server/main.go
 FROM hubimage/runtime-ubuntu:22.04
 RUN chown -R 65532:65532 /runtime
 COPY --from=builder /builder/bin/ops-server .
-COPY --from=builder /builder/default.yaml .
+COPY --from=builder /builder/default.toml .
 USER 65532:65532
-ENTRYPOINT ["./ops-server", "-c", "./default.yaml"]
+ENTRYPOINT ["./ops-server", "-c", "./default.toml"]
 Expose 80
