--- a/charts/ops/templates/service.yaml
+++ b/charts/ops/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "ops.fullname" . }}-metrics-service
+  name: {{ include "ops.fullname" . }}-server
   labels:
     {{- include "ops.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: 8080
+      targetPort: 80
       protocol: TCP
       name: http
   selector:
-    {{- include "ops.selectorLabels" . | nindent 4 }}
+    {{- include "ops.serverSelectorLabels" . | nindent 4 }}
