--- a/charts/ops/templates/clusterrole.yaml
+++ b/charts/ops/templates/clusterrole.yaml
@@ -85,6 +85,32 @@ rules:
   - patch
   - update
 - apiGroups:
+  - crd.chenshaowen.com
+  resources:
+  - taskruns
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - crd.chenshaowen.com
+  resources:
+  - taskruns/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - crd.chenshaowen.com
+  resources:
+  - taskruns/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
   - coordination.k8s.io
   resources:
   - leases
