add server for source filter

--- a/charts/ops/crds/crd.chenshaowen.com_clusters.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_clusters.yaml
@@ -61,6 +61,8 @@ spec:
             properties:
               config:
                 type: string
+              desc:
+                type: string
               server:
                 type: string
               token:
