--- a/charts/ops/crds/crd.chenshaowen.com_hosts.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_hosts.yaml
@@ -63,6 +63,8 @@ spec:
             description: HostSpec defines the desired state of Host
             properties:
               address:
+                type: string
+              desc:
                 description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
                   Important: Run "make" to regenerate code after modifying this file'
                 type: string
