improvemetn: add task

--- a/task/k8s-listtask.yaml
+++ b/task/k8s-listtask.yaml
@@ -11,4 +11,4 @@ spec:
   all: false
   steps:
     - name: list tasks
-      content: kubectl get task -n ${namespace} -o custom-columns=NAME:.metadata.name,DESCRIPTION:.spec.desc
+      content: kubectl get task.crd.chenshaowen.com -n ${namespace} -o custom-columns=NAME:.metadata.name,DESCRIPTION:.spec.desc
