fix: controller taskrun vars

--- a/task/k8s-listpod-abnormal.yaml
+++ b/task/k8s-listpod-abnormal.yaml
@@ -7,7 +7,7 @@ spec:
   desc: list abnormal pods in specified namespace
   nodeName: anymaster
   variables:
-    namespace: "default"
+    namespace: default
   all: false
   steps:
     - name: list pods
