--- a/task/k8s-listtask.yaml
+++ b/task/k8s-listtask.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   desc: list all task in K8s
   variables:
-    namespace: "ops-system"
+    namespace: ops-system
   nodeName: anymaster
   all: false
   steps:
