--- a/task/k8s-listnode.yaml
+++ b/task/k8s-listnode.yaml
@@ -6,7 +6,6 @@ metadata:
 spec:
   desc: list all nodes in K8s
   nodeName: anymaster
-  all: false
   steps:
     - name: list nodes
-      content: kubectl get nodes | awk '{print $1}'
+      content: kubectl get nodes | awk '{print $1 $2}'
