--- a/task/add-localbinpath.yaml
+++ b/task/add-localbinpath.yaml
@@ -4,7 +4,7 @@ metadata:
   name: add-localbinpath
   namespace: ops-system
 spec:
-  desc: Set Path
+  desc: add /usr/local/bin to PATH for specified host
   steps:
     - name: Set /usr/local/bin to PATH
       content: echo "export PATH=$PATH:/usr/local/bin" >> /etc/profile
