--- a/task/add-superuser.yaml
+++ b/task/add-superuser.yaml
@@ -4,7 +4,7 @@ metadata:
   name: add-superuser
   namespace: ops-system
 spec:
-  desc: Add Super User
+  desc: add a super user to specified host
   variables:
     name: ""
     passwd: ""
