--- a/task/get-kubeconfig.yaml
+++ b/task/get-kubeconfig.yaml
@@ -4,7 +4,7 @@ metadata:
   name: get-kubeconfig
   namespace: ops-system
 spec:
-  desc: Get Kubeconfig
+  desc: copy kubeconfig from etc to ~/.kube/config
   steps:
     - name: Get Remote Kubeconfig
       remotefile: /etc/kubernetes/admin.conf
