--- a/task/velero-uninstall.yaml
+++ b/task/velero-uninstall.yaml
@@ -4,7 +4,7 @@ metadata:
   name: velero-uninstall
   namespace: ops-system
 spec:
-  desc: Uninstall Velero
+  desc: uninstall Velero
   steps:
     - name: Uninstall Velero Server
       content: kubectl delete namespace/velero clusterrolebinding/velero & kubectl delete crds -l component=velero
