--- a/charts/ops/crds/crd.chenshaowen.com_hosts.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_hosts.yaml
@@ -28,13 +28,13 @@ spec:
     - jsonPath: .status.arch
       name: Arch
       type: string
-    - jsonPath: .status.cputotal
+    - jsonPath: .status.cpuTotal
       name: CPU
       type: string
-    - jsonPath: .status.memtotal
+    - jsonPath: .status.memTotal
       name: Mem
       type: string
-    - jsonPath: .status.disktotal
+    - jsonPath: .status.diskTotal
       name: Disk
       type: string
     - jsonPath: .status.heartTime
@@ -76,6 +76,8 @@ spec:
                 type: string
               privatekeypath:
                 type: string
+              secretref:
+                type: string
               timeoutseconds:
                 format: int64
                 type: integer
@@ -87,15 +89,15 @@ spec:
             properties:
               arch:
                 type: string
-              cpuload1:
+              cpuLoad1:
                 type: string
-              cputotal:
+              cpuTotal:
                 type: string
-              cpuusagepercent:
+              cpuUsagePercent:
                 type: string
-              disktotal:
+              diskTotal:
                 type: string
-              diskusagepercent:
+              diskUsagePercent:
                 type: string
               distribution:
                 type: string
@@ -109,11 +111,11 @@ spec:
                   of cluster Important: Run "make" to regenerate code after modifying
                   this file'
                 type: string
-              kernelversion:
+              kernelVersion:
                 type: string
-              memtotal:
+              memTotal:
                 type: string
-              memusagepercent:
+              memUsagePercent:
                 type: string
             type: object
         type: object
