--- a/task/uncordon-node.yaml
+++ b/task/uncordon-node.yaml
@@ -1,7 +1,7 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: k8s-uncordon
+  name: uncordon-node
   namespace: ops-system
 spec:
   desc: uncordon special node in Kubernetes
